@@ -4,6 +4,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -36,7 +37,6 @@ public class ArticleService {
 
     private final ConcurrentHashMap<String, Long> likeOperationCache = new ConcurrentHashMap<>();
 
-
     @Transactional
     public Article createSagesseArticle(SagesseDTO sagesseDTO) throws ArticlaException {
         Article article = sagesseDTO.toEntity();
@@ -46,7 +46,7 @@ public class ArticleService {
         article.setComments(0L);
         article.setShares(0L);
         article.setType(ArticleType.SAGESSE);
-        
+
         Article savedArticle = articleRepository.save(article);
         userService.incrementContentCount(article.getUserId());
         return savedArticle;
@@ -61,12 +61,17 @@ public class ArticleService {
         article.setComments(0L);
         article.setShares(0L);
         article.setType(ArticleType.HISTOIRE);
-        
+
         Article savedArticle = articleRepository.save(article);
         userService.incrementContentCount(article.getUserId());
         return savedArticle;
     }
-    
+
+    public Article getArticleById(Long articleId) throws ArticlaException {
+        return articleRepository.findById(articleId)
+                .orElseThrow(() -> new ArticlaException("Article non trouvé"));
+    }
+
     public List<Article> getAllArticles() {
         return articleRepository.findAll();
     }
@@ -80,59 +85,28 @@ public class ArticleService {
         User currentUser = userService.getUserById(currentUserId);
         Set<Long> likedArticles = currentUser.getLikedArticlesId();
         Set<Long> followingUsers = currentUser.getFollowingId();
-        Set<Long> savedArticles = currentUser.getSavedArticlesId(); 
-
-        List<PosteDTO> posts = articles.stream()
-                .map(article -> {
-                    PosteDTO posteDTO = new PosteDTO();
-                    posteDTO.setArticle(article);
-                    User user;
-                    try {
-                        user = userService.getUserById(article.getUserId());
-                        UserProfileDTO userProfileDTO = new UserProfileDTO(user.getId(), user.getNom(), user.getPrenom(), 
-                            user.getEmail(), user.getUsername(), user.getPhoneNumber(), user.getLocation(), 
-                            user.getWebsite(), user.getProfilePicture(), user.getBio(), user.getContentCount(), 
-                            user.getFollowersCount(), user.getFollowingCount(), user.getLikesReceived());
-                        posteDTO.setUser(userProfileDTO);
-                        posteDTO.setCreatedAt(Utilities.getElapsedTime(article.getDatePublication()));
-
-                        PostInteractionDTO interaction = new PostInteractionDTO();  
-                        interaction.setLiked(likedArticles != null && likedArticles.contains(article.getId()));
-                        interaction.setFollowing(followingUsers != null && followingUsers.contains(user.getId()));
-                        interaction.setSaved(savedArticles != null && savedArticles.contains(article.getId()));
-                        posteDTO.setInteraction(interaction);
-                    } catch (ArticlaException ex) {
-                        log.error("Error fetching user: " + ex.getMessage());
-                    }
-
-                    return posteDTO;
-                })
-                .toList();
-
-        return posts;
-    }
-
-    public List<PosteDTO> getSavedArticles(Long currentUserId) throws ArticlaException {
-        User currentUser = userService.getUserById(currentUserId);
-        Set<Long> likedArticles = currentUser.getLikedArticlesId();
-        Set<Long> followingUsers = currentUser.getFollowingId();
         Set<Long> savedArticles = currentUser.getSavedArticlesId();
-        List<Article> articles = articleRepository.findAllById(savedArticles);
+        Set<Long> reportedArticles = currentUser.getReportedArticlesId(); // Articles signalés
 
         List<PosteDTO> posts = articles.stream()
+                .filter(article -> reportedArticles == null || !reportedArticles.contains(article.getId())) // Filtrer
+                                                                                                            // les
+                                                                                                            // articles
+                                                                                                            // signalés
                 .map(article -> {
                     PosteDTO posteDTO = new PosteDTO();
                     posteDTO.setArticle(article);
                     User user;
                     try {
                         user = userService.getUserById(article.getUserId());
-                        UserProfileDTO userProfileDTO = new UserProfileDTO(user.getId(), user.getNom(), user.getPrenom(), 
-                            user.getEmail(), user.getUsername(), user.getPhoneNumber(), user.getLocation(), 
-                            user.getWebsite(), user.getProfilePicture(), user.getBio(), user.getContentCount(), 
-                            user.getFollowersCount(), user.getFollowingCount(), user.getLikesReceived());
+                        UserProfileDTO userProfileDTO = new UserProfileDTO(user.getId(), user.getNom(),
+                                user.getPrenom(),
+                                user.getEmail(), user.getUsername(), user.getPhoneNumber(), user.getLocation(),
+                                user.getWebsite(), user.getProfilePicture(), user.getBio(), user.getContentCount(),
+                                user.getFollowersCount(), user.getFollowingCount(), user.getLikesReceived());
                         posteDTO.setUser(userProfileDTO);
                         posteDTO.setCreatedAt(Utilities.getElapsedTime(article.getDatePublication()));
-                        
+
                         PostInteractionDTO interaction = new PostInteractionDTO();
                         interaction.setLiked(likedArticles != null && likedArticles.contains(article.getId()));
                         interaction.setFollowing(followingUsers != null && followingUsers.contains(user.getId()));
@@ -144,8 +118,54 @@ public class ArticleService {
 
                     return posteDTO;
                 })
-                .sorted((p1, p2) -> p2.getArticle().getDatePublication().compareTo(p1.getArticle().getDatePublication())) // décr
-                .toList();
+                .collect(Collectors.toList());
+
+        return posts;
+    }
+
+    public List<PosteDTO> getSavedArticles(Long currentUserId) throws ArticlaException {
+        User currentUser = userService.getUserById(currentUserId);
+        Set<Long> likedArticles = currentUser.getLikedArticlesId();
+        Set<Long> followingUsers = currentUser.getFollowingId();
+        Set<Long> savedArticles = currentUser.getSavedArticlesId();
+        Set<Long> reportedArticles = currentUser.getReportedArticlesId(); // Articles signalés
+
+        // Filtrer les articles sauvegardés pour exclure ceux qui ont été signalés
+        Set<Long> filteredSavedArticles = savedArticles.stream()
+                .filter(articleId -> reportedArticles == null || !reportedArticles.contains(articleId))
+                .collect(Collectors.toSet());
+
+        List<Article> articles = articleRepository.findAllById(filteredSavedArticles);
+
+        List<PosteDTO> posts = articles.stream()
+                .map(article -> {
+                    PosteDTO posteDTO = new PosteDTO();
+                    posteDTO.setArticle(article);
+                    User user;
+                    try {
+                        user = userService.getUserById(article.getUserId());
+                        UserProfileDTO userProfileDTO = new UserProfileDTO(user.getId(), user.getNom(),
+                                user.getPrenom(),
+                                user.getEmail(), user.getUsername(), user.getPhoneNumber(), user.getLocation(),
+                                user.getWebsite(), user.getProfilePicture(), user.getBio(), user.getContentCount(),
+                                user.getFollowersCount(), user.getFollowingCount(), user.getLikesReceived());
+                        posteDTO.setUser(userProfileDTO);
+                        posteDTO.setCreatedAt(Utilities.getElapsedTime(article.getDatePublication()));
+
+                        PostInteractionDTO interaction = new PostInteractionDTO();
+                        interaction.setLiked(likedArticles != null && likedArticles.contains(article.getId()));
+                        interaction.setFollowing(followingUsers != null && followingUsers.contains(user.getId()));
+                        interaction.setSaved(savedArticles != null && savedArticles.contains(article.getId()));
+                        posteDTO.setInteraction(interaction);
+                    } catch (ArticlaException ex) {
+                        log.error("Error fetching user: " + ex.getMessage());
+                    }
+
+                    return posteDTO;
+                })
+                .sorted((p1, p2) -> p2.getArticle().getDatePublication()
+                        .compareTo(p1.getArticle().getDatePublication()))
+                .collect(Collectors.toList());
 
         return posts;
     }
@@ -160,21 +180,20 @@ public class ArticleService {
                 .map(article -> {
                     PosteDTO posteDTO = new PosteDTO();
                     posteDTO.setArticle(article);
-                    
+
                     try {
                         UserProfileDTO userProfileDTO = new UserProfileDTO(
-                            currentUser.getId(), currentUser.getNom(), currentUser.getPrenom(), 
-                            currentUser.getEmail(), currentUser.getUsername(), currentUser.getPhoneNumber(), 
-                            currentUser.getLocation(), currentUser.getWebsite(), currentUser.getProfilePicture(), 
-                            currentUser.getBio(), currentUser.getContentCount(), currentUser.getFollowersCount(), 
-                            currentUser.getFollowingCount(), currentUser.getLikesReceived()
-                        );
+                                currentUser.getId(), currentUser.getNom(), currentUser.getPrenom(),
+                                currentUser.getEmail(), currentUser.getUsername(), currentUser.getPhoneNumber(),
+                                currentUser.getLocation(), currentUser.getWebsite(), currentUser.getProfilePicture(),
+                                currentUser.getBio(), currentUser.getContentCount(), currentUser.getFollowersCount(),
+                                currentUser.getFollowingCount(), currentUser.getLikesReceived());
                         posteDTO.setUser(userProfileDTO);
                         posteDTO.setCreatedAt(Utilities.getElapsedTime(article.getDatePublication()));
-                        
+
                         PostInteractionDTO interaction = new PostInteractionDTO();
                         interaction.setLiked(likedArticles != null && likedArticles.contains(article.getId()));
-                        interaction.setFollowing(false); 
+                        interaction.setFollowing(false);
                         interaction.setSaved(savedArticles != null && savedArticles.contains(article.getId()));
                         posteDTO.setInteraction(interaction);
                     } catch (Exception ex) {
@@ -187,40 +206,40 @@ public class ArticleService {
 
         return posts;
     }
-     
+
     @Transactional
-    public synchronized void likeArticle(Long articleId, Long currentUserId) throws ArticlaException  {
+    public synchronized void likeArticle(Long articleId, Long currentUserId) throws ArticlaException {
         String cacheKey = articleId + "-" + currentUserId;
-        
+
         if (likeOperationCache.containsKey(cacheKey)) {
             long lastOperation = likeOperationCache.get(cacheKey);
-            if (System.currentTimeMillis() - lastOperation < 1000) { 
+            if (System.currentTimeMillis() - lastOperation < 1000) {
                 throw new ArticlaException("Opération trop rapide, veuillez patienter");
             }
         }
-        
+
         likeOperationCache.put(cacheKey, System.currentTimeMillis());
-        
+
         try {
             User currentUser = userService.getUserById(currentUserId);
             Set<Long> likedArticles = currentUser.getLikedArticlesId();
-            
+
             if (likedArticles != null && likedArticles.contains(articleId))
                 throw new ArticlaException("Article déjà liké");
-            
+
             Article article = articleRepository.findById(articleId)
-                .orElseThrow(() -> new ArticlaException("Article not found"));
+                    .orElseThrow(() -> new ArticlaException("Article not found"));
 
             Long authorId = article.getUserId();
 
             articleRepository.incrementLikes(articleId);
             userService.addLikedArticle(currentUserId, articleId);
             userService.incrementLikesReceived(authorId);
-            
+
         } finally {
             new Thread(() -> {
                 try {
-                    Thread.sleep(2000); 
+                    Thread.sleep(2000);
                     likeOperationCache.remove(cacheKey);
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
@@ -232,39 +251,38 @@ public class ArticleService {
     @Transactional
     public synchronized void unlikeArticle(Long articleId, Long currentUserId) throws ArticlaException {
         String cacheKey = articleId + "-" + currentUserId + "-unlike";
-        
+
         if (likeOperationCache.containsKey(cacheKey)) {
             long lastOperation = likeOperationCache.get(cacheKey);
-            if (System.currentTimeMillis() - lastOperation < 1000) { 
+            if (System.currentTimeMillis() - lastOperation < 1000) {
                 throw new RuntimeException("Opération trop rapide, veuillez patienter");
             }
         }
-        
+
         likeOperationCache.put(cacheKey, System.currentTimeMillis());
-        
+
         try {
-          
+
             User currentUser = userService.getUserById(currentUserId);
             Set<Long> likedArticles = currentUser.getLikedArticlesId();
-            
+
             if (likedArticles == null || !likedArticles.contains(articleId)) {
                 throw new RuntimeException("Article pas encore liké");
             }
-            
-            Article article =  articleRepository.findById(articleId)
-                .orElseThrow(() -> new RuntimeException("Article not found"));
+
+            Article article = articleRepository.findById(articleId)
+                    .orElseThrow(() -> new RuntimeException("Article not found"));
 
             Long authorId = article.getUserId();
 
-            
             if (article.getLikes() > 0) {
                 articleRepository.decrementLikes(articleId);
             }
             userService.removeLikedArticle(currentUserId, articleId);
             userService.decrementLikesReceived(authorId);
-            
+
         } finally {
-           
+
             new Thread(() -> {
                 try {
                     Thread.sleep(2000); // 2 secondes
@@ -279,24 +297,25 @@ public class ArticleService {
     @Transactional
     public void deleteArticle(Long articleId, Long currentUserId) throws ArticlaException {
         Article article = articleRepository.findByIdAndUserId(articleId, currentUserId)
-            .orElseThrow(() -> new ArticlaException("Article introuvable ou vous n'êtes pas autorisé à le supprimer"));
+                .orElseThrow(
+                        () -> new ArticlaException("Article introuvable ou vous n'êtes pas autorisé à le supprimer"));
 
         Long likesCount = article.getLikes();
         Long commentsCount = article.getComments();
         Long sharesCount = article.getShares();
-        
+
         userService.removeArticleFromAllUsersLikes(articleId);
         userService.removeArticleFromAllUsersSaved(articleId);
-        
+
         if (likesCount > 0)
             userService.decrementLikesReceivedByAmount(currentUserId, likesCount);
-        
+
         userService.decrementContentCount(currentUserId);
         commentService.deleteAllCommentsByArticle(articleId);
         articleRepository.deleteById(articleId);
 
-        log.info("Article supprimé - ID: %d, Likes: %d, Commentaires: %d, Partages: %d%n", 
-                         articleId, likesCount, commentsCount, sharesCount);
+        log.info("Article supprimé - ID: %d, Likes: %d, Commentaires: %d, Partages: %d%n",
+                articleId, likesCount, commentsCount, sharesCount);
     }
 
     public List<PosteDTO> searchArticles(Long currentUserId, String searchText, String type) throws ArticlaException {
@@ -304,9 +323,9 @@ public class ArticleService {
         Set<Long> likedArticles = currentUser.getLikedArticlesId();
         Set<Long> followingUsers = currentUser.getFollowingId();
         Set<Long> savedArticles = currentUser.getSavedArticlesId();
-        
+
         List<Article> articles;
-        
+
         if (searchText != null && !searchText.trim().isEmpty() && type != null && !type.trim().isEmpty()) {
             ArticleType articleType = ArticleType.valueOf(type.toUpperCase());
             articles = articleRepository.findByContentContainingIgnoreCaseAndType(searchText.trim(), articleType);
@@ -318,25 +337,24 @@ public class ArticleService {
         } else {
             articles = articleRepository.findAll();
         }
-        
+
         List<PosteDTO> posts = articles.stream()
                 .map(article -> {
                     PosteDTO posteDTO = new PosteDTO();
                     posteDTO.setArticle(article);
-                    
+
                     try {
                         User user = userService.getUserById(article.getUserId());
                         UserProfileDTO userProfileDTO = new UserProfileDTO(
-                            user.getId(), user.getNom(), user.getPrenom(), 
-                            user.getEmail(), user.getUsername(), user.getPhoneNumber(), 
-                            user.getLocation(), user.getWebsite(), user.getProfilePicture(), 
-                            user.getBio(), user.getContentCount(), user.getFollowersCount(), 
-                            user.getFollowingCount(), user.getLikesReceived()
-                        );
+                                user.getId(), user.getNom(), user.getPrenom(),
+                                user.getEmail(), user.getUsername(), user.getPhoneNumber(),
+                                user.getLocation(), user.getWebsite(), user.getProfilePicture(),
+                                user.getBio(), user.getContentCount(), user.getFollowersCount(),
+                                user.getFollowingCount(), user.getLikesReceived());
                         posteDTO.setUser(userProfileDTO);
                         posteDTO.setCreatedAt(Utilities.getElapsedTime(article.getDatePublication()));
 
-                        PostInteractionDTO interaction = new PostInteractionDTO();  
+                        PostInteractionDTO interaction = new PostInteractionDTO();
                         interaction.setLiked(likedArticles != null && likedArticles.contains(article.getId()));
                         interaction.setFollowing(followingUsers != null && followingUsers.contains(user.getId()));
                         interaction.setSaved(savedArticles != null && savedArticles.contains(article.getId()));
@@ -347,12 +365,13 @@ public class ArticleService {
 
                     return posteDTO;
                 })
-                .sorted((p1, p2) -> p2.getArticle().getDatePublication().compareTo(p1.getArticle().getDatePublication())) 
+                .sorted((p1, p2) -> p2.getArticle().getDatePublication()
+                        .compareTo(p1.getArticle().getDatePublication()))
                 .toList();
 
-        log.info("Recherche effectuée - Texte: '{}', Type: '{}', Résultats: {}", 
-                 searchText, type, posts.size());
-        
+        log.info("Recherche effectuée - Texte: '{}', Type: '{}', Résultats: {}",
+                searchText, type, posts.size());
+
         return posts;
     }
 }
